force-app/main/default/objects/AgileTeam__c/AgileTeam__c.object-meta.xml
<CustomObject>
    <label>Time</label>
    <nameField>
        <label>Time</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Times</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>