force-app/main/default/objects/AgileTeam__c/fields/AgileProject__c.field-meta.xml
<CustomField>
    <fullName>AgileProject__c</fullName>
    <label>Projeto</label>
    <referenceTo>AgileProject__c</referenceTo>
    <relationshipLabel>Times</relationshipLabel>
    <relationshipName>Times</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>