force-app/main/default/objects/AgileTeam__c/fields/AllowApprovedStatusNoApproval__c.field-meta.xml
<CustomField>
    <fullName>AllowApprovedStatusNoApproval__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Quando marcado este campo para o time não é permitido que a Work seja &quot;Aprovada&quot; ou incluída numa sprint sem aprovação</inlineHelpText>
    <label>Validar Aprovado Sem Aprovação?</label>
    <type>Checkbox</type>
</CustomField>