force-app/main/default/objects/AgileTeam__c/fields/ProjectOwner__c.field-meta.xml
<CustomField>
    <fullName>ProjectOwner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PO (Aprovador)</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Times</relationshipName>
    <type>Lookup</type>
</CustomField>