force-app/main/default/objects/AgileTeam__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>AgileProject__c</columns>
    <columns>ProjectOwner__c</columns>
    <columns>OBJECT_ID</columns>
    <filterScope>Everything</filterScope>
    <label>Tudo</label>
</ListView>